Fix bookmark actions spacing

--- a/src/main.css
+++ b/src/main.css
@@ -125,7 +125,7 @@ a {
   background-color: #cfd7e0;
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2), inset 0 1px 20px rgba(0, 40, 130, 0.1);
 ;
-  padding: 0.1rem 0;
+  padding: 0.3rem 1rem;
 }
 .bookmark-actions > * {
   margin-left: 0.5rem;
